--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-body {background-color: #DCDAD7}
+body {background-color:rgb(248,0,255)}
 /* 顶部 */
 .list {background: none repeat scroll 0% 0% #036C8A;
     line-height: 48px;
